<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.febaisi.activityrecognition.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/holo_red_dark"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:id="@+id/activity_main_recording_text"
        android:text="@string/recording"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <LinearLayout
            android:id="@+id/activity_main_layout_starts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center">
            <Button
                android:id="@+id/activity_main_on_foot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_foot"
                />
            <Button
                android:id="@+id/activity_main_in_vehicle"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_vehicle"
                />
        </LinearLayout>

        <TextView
            android:text="00:00:00:000"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_main_stop_record_button"
            android:layout_alignLeft="@+id/activity_main_stop_record_button"
            android:layout_alignStart="@+id/activity_main_stop_record_button"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:id="@+id/activity_main_time" />


        <TextView
            android:text="@string/target_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_main_stop_record_button"
            android:layout_alignLeft="@+id/activity_main_stop_record_button"
            android:layout_alignStart="@+id/activity_main_stop_record_button"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:id="@+id/textView2" />

        <TextView
            android:text="@string/empty"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_main_stop_record_button"
            android:layout_alignLeft="@+id/activity_main_stop_record_button"
            android:layout_alignStart="@+id/activity_main_stop_record_button"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginTop="0dp"
            android:id="@+id/activity_main_target_state_text" />

        <Button
            android:text="@string/stop_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:id="@+id/activity_main_stop_record_button" />

    </LinearLayout>

</RelativeLayout>
